inc/alljoyn_unity/BusAttachment.h

typedef struct _alljoyn_busattachment_handle*               alljoyn_busattachment;
/**
 * Allocate a BusAttachment.
 *
 * @note Any BusAttachment allocated using this function must be freed using
 *
 * @param applicationName       Name of the application.
 * @param allowRemoteMessages   QC_TRUE if this attachment is allowed to receive messages from remote devices.
 */
extern AJ_API alljoyn_busattachment alljoyn_busattachment_create(const char* applicationName, QC_BOOL allowRemoteMessages);
/**
 * Free an allocated BusAttachment.
 *
 * @param bus BusAttachment to free.
 */
extern AJ_API void alljoyn_busattachment_destroy(alljoyn_busattachment bus);
/**
 * Create an interface description with a given name.
 *
 * @param bus    The BusAttachment on which to create an interface.
 * @param name   The requested interface name.
 * @param[out] iface
 *      - Interface description
 *      - NULL if cannot be created.
 * @param secure If QC_TRUE the interface is secure and method calls and signals will be encrypted.
 *
 * @return
 *      - #ER_OK if creation was successful.
 *      - #ER_BUS_IFACE_ALREADY_EXISTS if requested interface already exists
 * @see BusAttachment::CreateInterface
 */
extern AJ_API QStatus alljoyn_busattachment_createinterface(alljoyn_busattachment bus, const char* name,
                                                            alljoyn_interfacedescription* iface, QC_BOOL secure);
/**
 * Start the message bus.
 *
 * This method only begins the process of starting the bus. Sending and receiving messages
 * cannot begin until the bus is connected.
 *
 * There are two ways to determine whether the bus is currently connected:
 *    -# BusAttachment::IsConnected() returns true
 *    -# BusObject::ObjectRegistered() is called by the bus
 *
 * @param bus The BusAttachment to start.
 *
 * @return
 *      - #ER_OK if successful.
 *      - #ER_BUS_BUS_ALREADY_STARTED if already started
 *      - Other error status codes indicating a failure
 */
extern AJ_API QStatus alljoyn_busattachment_start(alljoyn_busattachment bus);
/**
 * Connect to a remote bus address.
 *
 * @param bus          The BusAttachment to be connected.
 * @param connectSpec  A transport connection spec string of the form:
 *                     @c "<transport>:<param1>=<value1>,<param2>=<value2>...[;]"
 *
 * @return
 *      - #ER_OK if successful.
 *      - An error status otherwise
 */
extern AJ_API QStatus alljoyn_busattachment_connect(alljoyn_busattachment bus, const char* connectSpec);